# octomap_evaluator

./: CMakeLists.txt  README.md  package.xml
config/: obstacles.yaml
src/: evaluator_node.cpp
